<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/nameHint" />

    <TextView
        android:id="@+id/textViewIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/ingredientsHint" />

    <TextView
        android:id="@+id/textViewMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/method"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/methodHint" />

    <TextView
        android:id="@+id/textViewTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/tipsHint" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/submit"
            android:textSize="20dp" />

</LinearLayout>