<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    style=""
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textViewdes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:text="@string/des" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="50dp"
            android:textSize="20dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/add" />

        <Button
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="50dp"
            android:textSize="20dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/view" />
    </LinearLayout>

</LinearLayout>